--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 platforms. May convey a sense of exuberance, whimsy, confidence, adventure, or other sentiments.</p>
         </div>
         <br><br>
-        <p><b> ~ By Kalvium 💙</b></p>
+        <p class="end"><b> ~ By Kalvium 💙</b></p>
     </div>
 </body>
 
